--- a/assets/style.css
+++ b/assets/style.css
@@ -15,7 +15,6 @@
 }
 
 * {
-    margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
@@ -34,8 +33,9 @@ nav {
 }
 
 #about {
-    padding: 80px 0;
+    padding: 30px 0;
     color: #ababab;
+    font-size: medium;
 }
 
 a {
@@ -47,8 +47,16 @@ header {
     height: 100%;
 }
 
+.top {
+    border-radius: 5px;
+    background-color: #3e6975;
+    padding: 5px;
+}
+
 .container {
-    padding: 10px 10%;
+    border-radius: 5px;
+    background-color: #3e6975;
+    padding: 5px;
 }
 
 .content_img:hover div {
@@ -80,7 +88,7 @@ header {
 }
 
 .header-text {
-    margin-top: 20%;
+    margin-top: 0;
     font-size: 25px;
 }
 
@@ -105,7 +113,15 @@ header {
 }
 
 .contact-me {
-    box-sizing: normal;
+    box-sizing:content-box;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 10px 10%;
+    border: 1px solid #ccc;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical
 }
 
 input[type=text],
@@ -143,3 +159,20 @@ input[type=submit]:hover {
     display: table;
     clear: both;
 }
+
+input[type=submit] {
+    background-color: #04AA6D;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+input[type=submit]:hover {
+    background-color: #2fd7d4;
+  }
+
+  .vex-img {
+
+  }
